--- a/pets.html
+++ b/pets.html
@@ -81,10 +81,10 @@
             <P>She became an internet sensation with 2.3 million followers on her smoothiethecat Instagram account.</P>
             
             <h3>Photo Gallery</h3>
-            <img src="images/Copy of Smoothie_yawn.jpg" width="200" alt="Smoothie is yawing.">
-            <img src="images/Copy of Smoothie_lying.jpg" width="200" alt="Smoothie is lying.">
-            <img src="images/Copy of Smoothie_staring.jpg" width="200" alt="Smoothie is staring at you">
-            <img src="images/Copy of Smoothie_curious.jpg" width="200" alt="Smoothie is curious about the world.">
+            <img src="images/Smoothie_yawn.jpg" width="200" alt="Smoothie is yawing.">
+            <img src="images/Smoothie_lying.jpg" width="200" alt="Smoothie is lying.">
+            <img src="images/Smoothie_staring.jpg" width="200" alt="Smoothie is staring at you">
+            <img src="images/Smoothie_curious.jpg" width="200" alt="Smoothie is curious about the world.">
             
             <h3>Likes</h3>
             <ul>
