--- a/pets.html
+++ b/pets.html
@@ -72,7 +72,7 @@
         </div>
         <div>
             <h2>Smoothie</h2>
-            <img src="images/Copy of Smoothie_staring.jpg" width="400" alt="Long-hair beautiful, orange tabby cat">
+            <img src="images/Smoothie_staring.jpg" width="400" alt="Long-hair beautiful, orange tabby cat">
             
             <p>Smoothie has been dubbed the "world's most photogenic cat", and her emerald eyes and golden fur have even inspired a
             mural in New Zealand. Smoothie also has an aptly-named brother named Milkshake, and the two are often featured together
